hphp/test/slow/enum-invalid-base/null.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/null.php on line 3
